--- a/index.html
+++ b/index.html
@@ -544,8 +544,11 @@
 			<div class="container">
 				<div class="text-center">
 					<h2 class="section-heading text-uppercase">Contact Us</h2>
-					<h3 class="section-subheading text-muted">
-						Lorem ipsum dolor sit amet consectetur.
+					<h3 class="section-heading text-warning">
+						Number: (561)555-5555
+					</h3>
+                    <h3 class="section-heading text-warning">
+						Email: Me@me.com
 					</h3>
 				</div>
 
@@ -654,7 +657,7 @@
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-lg-4 text-lg-start">
-						Copyright &copy; Your Website 2021
+						Copyright &copy; HyWyre I.T.
 					</div>
 					<div class="col-lg-4 my-3 my-lg-0">
 						<a class="btn btn-dark btn-social mx-2" href="#!"
