Added serveies procided info

--- a/index.html
+++ b/index.html
@@ -159,9 +159,11 @@
 								/>
 							</a>
 							<div class="portfolio-caption">
-								<div class="portfolio-caption-heading">Threads</div>
+								<div class="portfolio-caption-heading">
+									Network Infrastructure
+								</div>
 								<div class="portfolio-caption-subheading text-muted">
-									Illustration
+									Network Infrastructure
 								</div>
 							</div>
 						</div>
@@ -186,10 +188,8 @@
 								/>
 							</a>
 							<div class="portfolio-caption">
-								<div class="portfolio-caption-heading">Explore</div>
-								<div class="portfolio-caption-subheading text-muted">
-									Graphic Design
-								</div>
+								<div class="portfolio-caption-heading">CCTV</div>
+								<div class="portfolio-caption-subheading text-muted">CCTV</div>
 							</div>
 						</div>
 					</div>
@@ -213,9 +213,11 @@
 								/>
 							</a>
 							<div class="portfolio-caption">
-								<div class="portfolio-caption-heading">Finish</div>
+								<div class="portfolio-caption-heading">
+									Internet Service Provider
+								</div>
 								<div class="portfolio-caption-subheading text-muted">
-									Identity
+									Internet Service Provider
 								</div>
 							</div>
 						</div>
@@ -240,9 +242,9 @@
 								/>
 							</a>
 							<div class="portfolio-caption">
-								<div class="portfolio-caption-heading">Lines</div>
+								<div class="portfolio-caption-heading">Access Control</div>
 								<div class="portfolio-caption-subheading text-muted">
-									Branding
+									Access Control
 								</div>
 							</div>
 						</div>
@@ -267,9 +269,9 @@
 								/>
 							</a>
 							<div class="portfolio-caption">
-								<div class="portfolio-caption-heading">Southwest</div>
+								<div class="portfolio-caption-heading">Audio/Video</div>
 								<div class="portfolio-caption-subheading text-muted">
-									Website Design
+									Audio/Video
 								</div>
 							</div>
 						</div>
@@ -294,9 +296,9 @@
 								/>
 							</a>
 							<div class="portfolio-caption">
-								<div class="portfolio-caption-heading">Window</div>
+								<div class="portfolio-caption-heading">Network Security</div>
 								<div class="portfolio-caption-subheading text-muted">
-									Photography
+									Network Security
 								</div>
 							</div>
 						</div>
@@ -544,20 +546,16 @@
 			<div class="container">
 				<div class="text-center">
 					<h2 class="section-heading text-uppercase">Contact Us</h2>
-					<h3 class="section-heading text-warning">
-						Number: (561)555-5555
-					</h3>
-                    <h3 class="section-heading text-warning">
-						Email: Me@me.com
-					</h3>
+					<h3 class="section-heading text-warning">Number: (561)555-5555</h3>
+					<h3 class="section-heading text-warning">Email: Me@me.com</h3>
 				</div>
 
 				<!-- <form id="contactForm" data-sb-form-api-token="API_TOKEN">
 					<div class="row align-items-stretch mb-5">
 						<div class="col-md-6">
 							<div class="form-group"> -->
-								<!-- Name input-->
-								<!-- <input
+				<!-- Name input-->
+				<!-- <input
 									class="form-control"
 									id="name"
 									type="text"
@@ -569,8 +567,8 @@
 								</div>
 							</div>
 							<div class="form-group"> -->
-								<!-- Email address input-->
-								<!-- <input
+				<!-- Email address input-->
+				<!-- <input
 									class="form-control"
 									id="email"
 									type="email"
@@ -585,8 +583,8 @@
 								</div>
 							</div>
 							<div class="form-group mb-md-0"> -->
-								<!-- Phone number input-->
-								<!-- <input
+				<!-- Phone number input-->
+				<!-- <input
 									class="form-control"
 									id="phone"
 									type="tel"
@@ -600,8 +598,8 @@
 						</div>
 						<div class="col-md-6">
 							<div class="form-group form-group-textarea mb-md-0"> -->
-								<!-- Message input-->
-								<!-- <textarea
+				<!-- Message input-->
+				<!-- <textarea
 									class="form-control"
 									id="message"
 									placeholder="Your Message *"
@@ -616,11 +614,11 @@
 							</div>
 						</div>
 					</div> -->
-					<!-- Submit success message-->
-					<!---->
-					<!-- This is what your users will see when the form-->
-					<!-- has successfully submitted-->
-					<!-- <div class="d-none" id="submitSuccessMessage">
+				<!-- Submit success message-->
+				<!---->
+				<!-- This is what your users will see when the form-->
+				<!-- has successfully submitted-->
+				<!-- <div class="d-none" id="submitSuccessMessage">
 						<div class="text-center text-white mb-3">
 							<div class="fw-bolder">Form submission successful!</div>
 							To activate this form, sign up at
@@ -630,17 +628,17 @@
 							>
 						</div>
 					</div> -->
-					<!-- Submit error message-->
-					<!---->
-					<!-- This is what your users will see when there is-->
-					<!-- an error submitting the form-->
-					<!-- <div class="d-none" id="submitErrorMessage">
+				<!-- Submit error message-->
+				<!---->
+				<!-- This is what your users will see when there is-->
+				<!-- an error submitting the form-->
+				<!-- <div class="d-none" id="submitErrorMessage">
 						<div class="text-center text-danger mb-3">
 							Error sending message!
 						</div>
 					</div> -->
-					<!-- Submit Button-->
-					<!-- <div class="text-center">
+				<!-- Submit Button-->
+				<!-- <div class="text-center">
 						<button
 							class="btn btn-primary btn-xl text-uppercase disabled"
 							id="submitButton"
@@ -656,9 +654,7 @@
 		<footer class="footer py-4">
 			<div class="container">
 				<div class="row align-items-center">
-					<div class="col-lg-4 text-lg-start">
-						Copyright &copy; HyWyre I.T.
-					</div>
+					<div class="col-lg-4 text-lg-start">Copyright &copy; HyWyre I.T.</div>
 					<div class="col-lg-4 my-3 my-lg-0">
 						<a class="btn btn-dark btn-social mx-2" href="#!"
 							><i class="fab fa-twitter"></i
