--- a/index.html
+++ b/index.html
@@ -311,7 +311,11 @@
 			<div class="container">
 				<div class="text-center">
 					<h2 class="section-heading text-uppercase">About</h2>
-					<h3 class="section-subheading text-muted">We've come a long way.</h3>
+					<h3 class="section-subheading text-muted">
+						"Our mission is to enable economic growth through providing every
+						community <br />with the opportunity to connect to what connects the
+						world." -Jerrod Johnson, C.E.O
+					</h3>
 				</div>
 				<ul class="timeline">
 					<li>
