--- a/index.html
+++ b/index.html
@@ -550,8 +550,11 @@
 			<div class="container">
 				<div class="text-center">
 					<h2 class="section-heading text-uppercase">Contact Us</h2>
-					<h3 class="section-heading text-warning">Number: (561)555-5555</h3>
-					<h3 class="section-heading text-warning">Email: Me@me.com</h3>
+					<h3 class="section-heading text-warning">Number: (305) 308-2596</h3>
+					<h3 class="section-heading text-white">Email: Hywyreit@gmail.com</h3>
+					<h3 class="section-heading text-warning">
+						Address: 3100 N.W. 196th st Miami Gardens, Fl 33056
+					</h3>
 				</div>
 
 				<!-- <form id="contactForm" data-sb-form-api-token="API_TOKEN">
