--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                        li class="nav-item">
+							<a class="nav-link" href="#masthead">Home</a>
+						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#services">Services</a>
 						</li>
