--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        li class="nav-item">
+						<li class="nav-item">
 							<a class="nav-link" href="#masthead">Home</a>
 						</li>
 						<li class="nav-item">
