--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			</div>
 		</nav>
 		<!-- Masthead-->
-		<header class="masthead">
+		<header class="masthead" id="masthead">
 			<div class="container">
 				<div class="masthead-subheading text-white">
 					Welcome To HyWyre I.T.!
