Added phone link

--- a/index.html
+++ b/index.html
@@ -553,7 +553,9 @@
 			<div class="container">
 				<div class="text-center">
 					<h2 class="section-heading text-uppercase">Contact Us</h2>
-					<h3 class="section-heading text-warning">Number: (305) 308-2596</h3>
+					<h3 class="section-heading text-warning">
+						Number: <a href="tel:305-308-2596"> (305) 308-2596</a>
+					</h3>
 					<h3 class="section-heading text-white">Email: Hywyreit@gmail.com</h3>
 					<h3 class="section-heading text-warning">
 						Address: 3100 N.W. 196th st Miami Gardens, Fl 33056
