Added links to email

--- a/index.html
+++ b/index.html
@@ -556,9 +556,13 @@
 					<h3 class="section-heading text-warning">
 						Number: <a href="tel:305-308-2596"> (305) 308-2596</a>
 					</h3>
-					<h3 class="section-heading text-white">Email: Hywyreit@gmail.com</h3>
+
 					<h3 class="section-heading text-warning">
 						Address: 3100 N.W. 196th st Miami Gardens, Fl 33056
+					</h3>
+					<h3 class="section-heading text-warning">
+						Email:
+						<a href="mailto: Hywyreit@gmail.com">Hywyreit@gmail.com</a>
 					</h3>
 				</div>
 
